--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "rest-api-frontend-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "express": "^4.16.4",
-    "express-favicon": "^2.0.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@material-ui/core": "3.6.0",
+    "@material-ui/icons": "3.0.1",
+    "axios": "0.18.0",
+    "express": "4.16.4",
+    "express-favicon": "2.0.1",
+    "formik": "1.3.2",
+    "history": "4.7.2",
+    "material-ui-snackbar-redux": "0.2.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-helmet": "5.2.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "styled-components": "4.0.2",
+    "yup": "0.26.6"
   },
   "scripts": {
     "start": "node server/server.js",
