--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "formik": "1.3.2",
     "history": "4.7.2",
     "material-ui-snackbar-redux": "0.2.0",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-helmet": "5.2.0",
+    "react-material-ui-form-validator": "^2.0.3",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
@@ -21,6 +24,12 @@
     "redux-thunk": "2.3.0",
     "styled-components": "4.0.2",
     "yup": "0.26.6"
+  },
+  "devDependencies": {
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.7.1",
+    "enzyme-to-json": "3.3.4",
+    "react-test-renderer": "16.7.0"
   },
   "scripts": {
     "start": "node server/server.js",
